# ray-tracing

./: .gitignore  Cargo.toml  inv.py  report.md
src/: lib.rs  main.rs
src/graphics/: bounding.rs  material.rs  mod.rs
src/graphics/shape/: bezier.rs  circle.rs  mesh.rs  mod.rs  plane.rs  rectangle.rs  sphere.rs  triangle.rs
src/math/: matrix.rs  mod.rs  vector.rs
src/scene/: camera.rs  mod.rs
src/scene/renderer/: mod.rs  ppm.rs  pt.rs
src/utils/: image.rs  kdtree.rs  mod.rs
src/utils/kdtree/: mod.rs  triangle.rs
task/: bezier.json  bob.json  dof-ppm.json  dof.json  example.json  mesh.json  pt_example.json  small.json  test.json
