[package]
name = "ray-tracing"
version = "0.1.0"
authors = ["function2-llx <function2@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.112", features = ["derive"] }
serde_json = "1.0.55"
rayon = "1.3.0"
image = "0.23.5"
rand = "0.7.3"
pbr = "1.0.3"
wavefront_obj = "7.0.0"